...
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <color key="tintColor" red="1" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="arrowCnt"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="150" id="Rna-1D-dth"/>
...
                                <rect key="frame" x="163" y="250" width="50" height="50"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="add3"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="c2R-Ag-kKM"/>
...
                                <rect key="frame" x="66" y="430" width="50" height="50"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="sub1"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="50" id="XX8-M3-LEf"/>
...
                                <rect key="frame" x="259" y="430" width="50" height="50"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="sub6"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="TKM-q9-ge9"/>
...
                                <rect key="frame" x="56" y="547" width="263" height="60"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="rst"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="ZZU-Jj-bS4"/>
...
                                <rect key="frame" x="66" y="250" width="50" height="50"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="add1" label="add1"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="0hH-AF-Hio"/>
...
                                <rect key="frame" x="259" y="250" width="50" height="50"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="add6"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="50" id="jqe-2n-Yw7"/>
...
                                <rect key="frame" x="163" y="430" width="50" height="50"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="sub3"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="50" id="9lT-uA-T0N"/>
...
